# hermes-finance

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  entrypoint.sh  pyproject.toml  railway.toml  ruff.toml
.claude/: settings.json
.claude/agents/: backend-developer.md
.claude/skills/api-skill/: SKILL.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0003_fix_accounts_schema.py
api/: pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py
api/finance_api/: composition.py
api/finance_api/domains/insights/: queries.py  tools.py
api/finance_api/domains/transactions/: models.py
api/finance_api/routers/: health.py
api/hermess_api/: composition.py  main.py
api/hermess_api/bot/: handlers.py
api/hermess_api/core/: config.py
api/hermess_api/core/db/: engine.py
api/hermess_api/core/logging/: setup.py
api/hermess_api/domains/insights/: charts.py  queries.py  tools.py
api/hermess_api/domains/sync/: models.py  monobank.py
api/hermess_api/routers/: health.py
app/controllers/settings/: monobank_controller.rb
app/models/: monobank_sync.rb  transaction.rb
app/views/settings/: _settings_nav.html.erb
config/: routes.rb
db/migrate/: 20260527000001_change_default_period_to_last_365_days.rb
finance_api/: composition.py  main.py  schemas.py
finance_api/bot/: __init__.py  handlers.py
finance_api/core/: config.py
finance_api/core/db/: engine.py
finance_api/routers/: accounts.py  budgets.py  health.py  sync.py  transactions.py
monobank-sync/: Dockerfile  sync.py
(+17 files in other folders)
