[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermess-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "structlog>=24.4.0",
    "anthropic>=0.40.0",
    "aiogram>=3.15.0",
    "apscheduler>=3.10.0",
    "matplotlib>=3.9.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-dotenv>=0.5.2",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hermess_api"]
